--- a/playbook.yml
+++ b/playbook.yml
@@ -16,6 +16,8 @@
         - python3.4-venv
         - python3-dev
         - build-essential
+        - libjack-jackd2-dev
+        - portaudio19-dev
 
     - name: install pip
       sudo: yes
