--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
--e git+git://github.com/jpercent/pyttsx.git#egg=pyttsx
+-e git+git://github.com/jpercent/pyttsx.git@master#egg=pyttsx
 SpeechRecognition==3.3.3
 tornado==4.3
