adding ssl support for microphone access

--- a/playbook.yml
+++ b/playbook.yml
@@ -8,6 +8,10 @@
       notify:
         - start nginx
 
+    - name: create self-signed SSL cert
+      command: openssl req -new -nodes -x509 -subj "/C=US/ST=Oregon/L=Portland/O=IT/CN=${ansible_fqdn}" -days 3650 -keyout /etc/ssl/certs/server.key -out /etc/ssl/certs/server.crt -extensions v3_ca creates=/etc/ssl/certs/server.crt
+      notify: reload nginx
+
     - name: install python dev
       sudo: yes
       apt: pkg={{ item }} state=present
