--- a/playbook.yml
+++ b/playbook.yml
@@ -16,6 +16,7 @@
       sudo: yes
       apt: pkg={{ item }} state=present
       with_items:
+        - python-dev
         - python3-setuptools
         - python3.4-venv
         - python3-dev
@@ -37,6 +38,21 @@
       command: cp /srv/speechy/confs/upstart /etc/init/speechy.conf
 
     - file: path=/etc/init/speechy.conf owner=root group=root mode=0644
+
+    - name: Install Pkgs for CMU Sphinx
+      sudo: yes
+      apt: pkg={{ item }} state=present
+      with_items:
+        - autoconf
+        - libtool
+        - automake
+        - bison
+        - swig
+        - unzip
+
+    - name: Install CMU Sphinx & Pocketsphinx
+      sudo: yes
+      shell: /srv/speechy/bootstrap.sh
 
   handlers:
     - name: start nginx
