--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
+backports-abc==0.4
+ecdsa==0.13
+Fabric3==1.10.2.post3
+paramiko==1.16.0
+pycrypto==2.6.1
 -e git+git://github.com/jpercent/pyttsx.git@master#egg=pyttsx
+six==1.10.0
 SpeechRecognition==3.3.3
 tornado==4.3
