--- a/confs/nginx.conf
+++ b/confs/nginx.conf
@@ -51,8 +51,9 @@ http {
     # Logging Settings
     ##
 
-    log_format  main  '[NGINX] $remote_addr $host $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent $request_time "$http_referer" "$http_user_agent" "$upstream_response_time"';
+    log_format combined '$remote_addr - $remote_user [$time_local]  '
+                        '"$request" $status $body_bytes_sent '
+                        '"$http_referer" "$http_user_agent"';
 
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
